--- a/harvestsaver/.gitignore
+++ b/harvestsaver/.gitignore
@@ -8,3 +8,6 @@ harvestsaver/__pycache__/
 
 accounts/__pycache__/
 accounts/migrations/__pycache__/
+
+farm/__pycache__/
+farm/migrations/__pycache__/
