added docstrings for transit models

--- a/harvestsaver/.gitignore
+++ b/harvestsaver/.gitignore
@@ -11,3 +11,6 @@ accounts/migrations/__pycache__/
 
 farm/__pycache__/
 farm/migrations/__pycache__/
+
+transit/__pycache__/
+transit/migrations/__pycache__/
