django cli setup

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,8 +23,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
+        cd harvestsaver
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
       run: |
+        cd harvestsaver
+        export SECRET_KEY="$SECRET_KEY"
+        echo "SECRECT_KEY: $SECRET_KEY"
         python manage.py test
