--- a/harvestsaver/requirements.txt
+++ b/harvestsaver/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.7.2
 Django
-Pillow==10.1.0
-python-dotenv==1.0.0
+Pillow
+python-dotenv
 sqlparse==0.4.4
 typing_extensions==4.8.0
 whitenoise==6.6.0
