--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,9 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "development" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "development" ]
 
 jobs:
   build:
@@ -30,5 +30,30 @@ jobs:
       run: |
         cd harvestsaver
         export SECRET_KEY="$SECRET_KEY"
-        echo "SECRECT_KEY: $SECRET_KEY"
+        echo "SECRECT_KEY: $SECRET_KEY "
         python manage.py test
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Deploy to Development Server
+      run: |
+        cd harvestsaver
+
+        scp -r . ubuntu:54.146.57.34:/live
+
+        ssh ubuntu@54.146.57.34 << 'EOF'
+        cd live
+
+        python manage.py migrate
+
+        systemctl restart gunicorn
+        systemctl restart nginx
+      EOF
+
+      
