--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -47,11 +47,11 @@ jobs:
 
         scp -r . ubuntu:54.146.57.34:/live
 
-        ssh ubuntu@54.146.57.34 << 'EOF'
+        ssh ubuntu@54.146.57.34 <<EOF
         cd live
 
         python manage.py migrate
 
         systemctl restart gunicorn
         systemctl restart nginx
-    EOF 
+EOF 
