--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,6 +45,6 @@ jobs:
       run: |
         cd harvestsaver
 
-        scp -r . ubuntu:54.146.57.34:/live
+        scp /usr/bin/scp -r . ubuntu:54.146.57.34:/live
 
         ssh ubuntu@54.146.57.34 "cd live && python manage.py migrate && systemctl restart gunicorn && systemctl restart nginx"
