--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -47,4 +47,12 @@ jobs:
 
         scp /usr/bin/scp -r . ubuntu:54.146.57.34:/live
 
-        ssh ubuntu@54.146.57.34 "cd live && python manage.py migrate && systemctl restart gunicorn && systemctl restart nginx"
+        /usr/bin/ssh ubuntu@54.146.57.34 "cd live && python manage.py migrate && systemctl restart gunicorn && systemctl restart nginx"
+    
+    - name: Debugging
+      run: |
+        echo "SSH Key:"
+        echo "GitHub Actions Environment:"
+        env
+        echo "Trying to SSH to the server..."
+        /usr/bin/ssh -v -i /path/to/your/private-key.pem ubuntu@54.146.57.34
