--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,14 +44,8 @@ jobs:
     - name: Deploy to Development Server
       run: |
         cd harvestsaver
-        echo "SSH Key:"
-        echo "GitHub Actions Environment:"
 
-        echo "${{ secrets.DEPLOY_KEY }}" > deploy_key.pem
-        chmod 600 deploy_key.pem
+        echo "${{ secrets.DEPLOY_KEY }}"
 
-        ssh-keyscan -t rsa 54.146.57.34 >> known_hosts
-        cat known_hosts
-
-        scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=known_hosts -r . ubuntu@54.146.57.34:/live
-        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=known_hosts ubuntu@54.146.57.34 "cd live && python manage.py migrate && systemctl restart gunicorn && systemctl restart nginx"
+        scp -o StrictHostKeyChecking=no -r ../../harvestsaver ubuntu@18.210.13.40:/live
+        ssh -o StrictHostKeyChecking=no ubuntu@18.210.13.40 "cd live && python manage.py migrate && systemctl restart gunicorn && systemctl restart nginx"
