--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,4 +50,4 @@ jobs:
       run: ssh-keyscan -H 18.210.13.40 >> ~/.ssh/known_hosts
 
     - name: Deploy with rsync
-      run: rsync -avz . ubuntu@18.210.13.40:/home/live/harvestsaver
+      run: rsync -avz . ubuntu@18.210.13.40:~/live/harvestsaver
