--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -46,8 +46,16 @@ jobs:
       with:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+
     - name: Adding know Hosts
       run: ssh-keyscan -H 18.210.13.40 >> ~/.ssh/known_hosts
 
-    - name: Deploy with rsync
-      run: rsync -avz . ubuntu@18.210.13.40:~/live/harvestsaver
+    - name: Copying files
+      run: rsync -avz ../ ubuntu@18.210.13.40:~/live/harvestsaver
+
+    - name: SSH into the Server and Deploy
+      run: |
+        cd ~/live/harvestsaver
+        python3 -m venv venv
+        
+        ssh ubuntu@18.210.13.40 "cd ~/live/harvestsaver && source -/live/harvestsaver/venv/bin/activate && pip install -r requirements.txt && python manage.py migrate && sudo systemctl restart gunicorn && sudo systemctl restart nginx"
