--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -56,4 +56,4 @@ jobs:
     - name: SSH into the Server and Deploy
       run: |
         
-        ssh ubuntu@18.210.13.40 "cd ~/live/harvestsaver && source -/live/harvestsaver/venv/bin/activate && pip install -r requirements.txt && python manage.py migrate && sudo systemctl restart gunicorn && sudo systemctl restart nginx"
+        ssh ubuntu@18.210.13.40 "cd ~/live/harvestsaver && source ~/live/harvestsaver/venv/bin/activate && pip install -r requirements.txt && python manage.py migrate && sudo systemctl restart gunicorn && sudo systemctl restart nginx"
