--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -51,7 +51,7 @@ jobs:
       run: ssh-keyscan -H 18.210.13.40 >> ~/.ssh/known_hosts
 
     - name: Copying files
-      run: rsync -avz ../ ubuntu@18.210.13.40:~/live/harvestsaver
+      run: rsync -avz . ubuntu@18.210.13.40:~/live/harvestsaver
 
     - name: SSH into the Server and Deploy
       run: |
