--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,7 +42,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Decrypt .env file
-      run: openssl aes-256-cbc -d -a -in harvestsaver/.env.enc -out harvestsaver/.env -k ${{ secrets.DECRYPTION_KEY }}
+      run: |
+        cd harvestsaver
+        openssl aes-256-cbc -d -a -in harvestsaver/.env.enc -out harvestsaver/.env -k ${{ secrets.DECRYPTION_KEY }}
 
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
