--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,6 +44,7 @@ jobs:
     - name: Decrypt .env file
       run: |
         cd harvestsaver
+        echo "Decryption Key: ${{ secrets.DECRYPTION_KEY }}"
         openssl aes-256-cbc -d -a -in harvestsaver/.env.enc -out harvestsaver/.env -k ${{ secrets.DECRYPTION_KEY }}
 
     - name: Install SSH Key
