--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         cd harvestsaver
         echo "Decryption Key: ${{ secrets.DECRYPTION_KEY }}"
-        openssl aes-256-cbc -d -a -in harvestsaver/.env.enc -out harvestsaver/.env -k ${{ secrets.DECRYPTION_KEY }}
+        openssl aes-256-cbc -d -a -in harvestsaver/.env.enc -out harvestsaver/.env -k "${{ secrets.DECRYPTION_KEY }}" -pbkdf2
 
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
