--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,10 +1,10 @@
-name: Django CI
+name: Deveopment work flow
 
 on:
   push:
-    branches: [ "main", "development" ]
+    branches: ["development" ]
   pull_request:
-    branches: [ "main", "development" ]
+    branches: ["development" ]
 
 jobs:
   build:
@@ -58,15 +58,15 @@ jobs:
     - name: Adding know Hosts
       run: ssh-keyscan -H 18.210.13.40 >> ~/.ssh/known_hosts
 
-    - name: Copying files
-      run: rsync -avz . ubuntu@18.210.13.40:~/live/harvestsaver
+    #- name: Copying files
+    #  run: rsync -avz . ubuntu@18.210.13.40:~/live/harvestsaver
 
-    - name: SSH into the Server and Deploy
-      run: |
-        ssh ubuntu@18.210.13.40 "cd ~/live/harvestsaver/harvestsaver && \
-        source ~/live/harvestsaver/venv/bin/activate && \
-        pip install -r requirements.txt && \
-        python manage.py migrate && \
-        python manage.py collectstatic --noinput && \
-        sudo systemctl restart gunicorn && \
-        sudo systemctl restart nginx"
+    #- name: SSH into the Server and Deploy
+    #  run: |
+    #    ssh ubuntu@18.210.13.40 "cd ~/live/harvestsaver/harvestsaver && \
+    #    source ~/live/harvestsaver/venv/bin/activate && \
+    #    pip install -r requirements.txt && \
+    #    python manage.py migrate && \
+    #    python manage.py collectstatic --noinput && \
+    #    sudo systemctl restart gunicorn && \
+    #    sudo systemctl restart nginx"
