--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -55,14 +55,14 @@ jobs:
         known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
     - name: Adding know Hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+      run: ssh-keyscan -H "${{ secrets.SSH_HOST_PRODUCTION }}" >> ~/.ssh/known_hosts
 
     - name: Copying files
-      run: rsync -avz . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/live/harvestsaver
+      run: rsync -avz . "${{ secrets.SSH_USER_PRODUCTION }}"@"${{ secrets.SSH_HOST_PRODUCTION }}"":~/live/harvestsaver
 
     - name: SSH into the Server and Deploy
       run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ~/live/harvestsaver/harvestsaver && \
+        ssh ${{ secrets.SSH_USER_PRODUCTION }}@${{ secrets.SSH_HOST_PRODUCTION }} "cd ~/live/harvestsaver/harvestsaver && \
         source ~/live/harvestsaver/venv/bin/activate && \
         pip install -r requirements.txt && \
         python manage.py migrate && \
