--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -58,7 +58,7 @@ jobs:
       run: ssh-keyscan -H "${{ secrets.SSH_HOST_PRODUCTION }}" >> ~/.ssh/known_hosts
 
     - name: Copying files
-      run: rsync -avz . "${{ secrets.SSH_USER_PRODUCTION }}"@"${{ secrets.SSH_HOST_PRODUCTION }}"":~/live/harvestsaver
+      run: rsync -avz . "${{ secrets.SSH_USER_PRODUCTION }}"@"${{ secrets.SSH_HOST_PRODUCTION }}":~/live/harvestsaver
 
     - name: SSH into the Server and Deploy
       run: |
