--- a/harvestsaver/requirements.txt
+++ b/harvestsaver/requirements.txt
@@ -1,16 +1,23 @@
 asgiref==3.7.2
+boto3==1.33.8
+botocore==1.33.8
 certifi==2023.11.17
 charset-normalizer==3.3.2
 Django==4.2.7
+django-storages==1.14.2
 djangorestframework==3.14.0
 idna==3.6
+jmespath==1.0.1
 Pillow==10.1.0
 psycopg2-binary==2.9.9
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
+s3transfer==0.8.2
+six==1.16.0
 sqlparse==0.4.4
 stripe==7.6.0
 typing_extensions==4.8.0
-urllib3==2.1.0
+urllib3==2.0.7
 whitenoise==6.6.0
