--- a/harvestsaver/requirements.txt
+++ b/harvestsaver/requirements.txt
@@ -8,6 +8,8 @@ Django==4.2.7
 django-crispy-forms==2.0
 django-storages==1.14.2
 djangorestframework==3.14.0
+geographiclib==2.0
+geopy==2.4.1
 idna==3.6
 jmespath==1.0.1
 Pillow==10.1.0
