--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MY_ENVIRONMENT: production
+      DJANGO_SETTINGS_MODULE: your_project.settings_github
     strategy:
       max-parallel: 4
       matrix:
