--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MY_ENVIRONMENT: development
-      DJANGO_SETTINGS_MODULE: harvestsaver.settings_github
+      DJANGO_SETTINGS_MODULE: harvestsaver.settings_actions
     strategy:
       max-parallel: 4
       matrix:
