--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MY_ENVIRONMENT: production
-      DJANGO_SETTINGS_MODULE: your_project.settings_github
+      DJANGO_SETTINGS_MODULE: harvestsaver.settings_actions
     strategy:
       max-parallel: 4
       matrix:
